# azunyan-bot

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  get_shows.py  main.py  old_bot.py  pyproject.toml  requirements.txt  run.sh  shows.json
.github/workflows/: discord-bot-deploy.yml  main.yml
archived/: main.yml  user_selections.json
commands/: addrole.py  ai.py  anisongdb.py  avatar.py  calculate.py  chat.py  dict.py  gia_xang.py  hex2text.py  kanji.py  lich_chieu.py  note.py  ohio.py  omikuji.py  partyrank.py  ping.py  qr.py  quote.py  sleep.py  template.py  tracemoe.py  xinxam.py
core/: app.py  bot.py  config.py  container.py  db.py  http.py  loader.py  logging.py  mongo.py  prefix.py  state.py
feature/: CustomBot.py  MongoManager.py  SendMessage.py  __init__.py  check.py  create_database.py
plugins/_template/: __init__.py  core.py
plugins/ai/: __init__.py  core.py  views.py
plugins/avatar/: __init__.py  core.py
plugins/calculate/: __init__.py  core.py
plugins/chat/: __init__.py  core.py
plugins/dictionary/: __init__.py  core.py  views.py
plugins/hex_to_text/: __init__.py  core.py
plugins/kanji/: __init__.py  core.py  parser.py  views.py
plugins/note/: __init__.py  repository.py  service.py
plugins/omikuji/: __init__.py  core.py
plugins/partyrank/: __init__.py  core.py  views.py
plugins/ping/: __init__.py  core.py
plugins/qr/: __init__.py  core.py
plugins/role/: __init__.py  views.py
plugins/sleep/: __init__.py  core.py
plugins/song/: __init__.py  core.py  (+1 more)
xinxamdata/: 100quexam.json
(+5 files in other folders)
